# shapefile-processing

./: README.md  pyproject.toml
sample_data/: Test_Manually_Picked_Boulders.dbf  Test_Manually_Picked_Boulders.qix  Test_Manually_Picked_Boulders.shp  Test_Manually_Picked_Boulders.shx
src/shapefile_processing/: __init__.py  __main__.py  main_window.py  map_renderer.py  parameters_dialog.py  shapefile_manager.py  spatial_metrics_service.py  zoom_to_data_button.py
src/shapefile_processing/services/: data_quality_services.py  spatial_metrics_service.py
src/shapefile_processing/ui/: __init__.py  help_dialog.py  main_window.py  map_renderer.py  zoom_to_data_button.py
tests/: test_data_quality_services.py  test_main_window.py  test_spatial_metrics_service.py
