[project]
name = "shapefile-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Marin Leontenko",email = "marin.leontenko@ses.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "shapefile_processing", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
