[project]
name = "shapefile-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Marin Leontenko",email = "marin.leontenko@ses.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "shapefile_processing", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PyQt6 = "^6.0"
pyqtgraph = "^0.12.0"
geopandas = ">=0.14.4,<1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.0"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
